force-app/main/default/objects/FA_Output__c/FA_Output__c.object-meta.xml
<CustomObject>
    <label>FA Output</label>
    <nameField>
        <label>FA Output</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FA Output</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>