force-app/main/default/objects/FA_Output__c/fields/ATEX_20__c.field-meta.xml
<CustomField>
    <fullName>ATEX_20__c</fullName>
    <label>ATEX 20</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>