force-app/main/default/objects/FA_Output__c/fields/Base_20__c.field-meta.xml
<CustomField>
    <fullName>Base_20__c</fullName>
    <label>Base 20</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>