force-app/main/default/objects/FA_Output__c/fields/Base_40__c.field-meta.xml
<CustomField>
    <fullName>Base_40__c</fullName>
    <label>Base 40</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>