force-app/main/default/objects/FA_Output__c/fields/BrinnellHardnessExamination__c.field-meta.xml
<CustomField>
    <fullName>BrinnellHardnessExamination__c</fullName>
    <label>BrinnellHardnessExamination</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>