force-app/main/default/objects/FA_Output__c/fields/CharpyImpactTest_40__c.field-meta.xml
<CustomField>
    <fullName>CharpyImpactTest_40__c</fullName>
    <label>CharpyImpactTest 40</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>