force-app/main/default/objects/FA_Output__c/fields/CUTR_30__c.field-meta.xml
<CustomField>
    <fullName>CUTR_30__c</fullName>
    <label>CUTR 30</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>