force-app/main/default/objects/FA_Output__c/fields/FA_Output_Relation_Field__c.field-meta.xml
<CustomField>
    <fullName>FA_Output_Relation_Field__c</fullName>
    <label>FA Output Relation Field</label>
    <referenceTo>Flame_Product__c</referenceTo>
    <relationshipLabel>FA Output</relationshipLabel>
    <relationshipName>FA_Output</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>