force-app/main/default/objects/FA_Output__c/fields/FilletWeldLiquidDyePenetrantExamination__c.field-meta.xml
<CustomField>
    <fullName>FilletWeldLiquidDyePenetrantExamination__c</fullName>
    <label>FilletWeldLiquidDyePenetrantExamination</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>