force-app/main/default/objects/FA_Output__c/fields/InletOptionPriceAdder__c.field-meta.xml
<CustomField>
    <fullName>InletOptionPriceAdder__c</fullName>
    <label>InletOptionPriceAdder</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>