force-app/main/default/objects/FA_Output__c/fields/InletTWellTCouplePriceAdder__c.field-meta.xml
<CustomField>
    <fullName>InletTWellTCouplePriceAdder__c</fullName>
    <label>InletTWellTCouplePriceAdder</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>