force-app/main/default/objects/FA_Output__c/fields/IntergranularCorrosionTesting_30__c.field-meta.xml
<CustomField>
    <fullName>IntergranularCorrosionTesting_30__c</fullName>
    <label>IntergranularCorrosionTesting 30</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>