force-app/main/default/objects/FA_Output__c/fields/MagneticParticleExamination__c.field-meta.xml
<CustomField>
    <fullName>MagneticParticleExamination__c</fullName>
    <label>MagneticParticleExamination</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>