force-app/main/default/objects/FA_Output__c/fields/MaterialSourceRestrictions_10__c.field-meta.xml
<CustomField>
    <fullName>MaterialSourceRestrictions_10__c</fullName>
    <label>MaterialSourceRestrictions_10</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>