force-app/main/default/objects/FA_Output__c/fields/MaterialSourceRestrictions_20__c.field-meta.xml
<CustomField>
    <fullName>MaterialSourceRestrictions_20__c</fullName>
    <label>MaterialSourceRestrictions_20</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>