force-app/main/default/objects/FA_Output__c/fields/MaterialSourceRestrictions_30__c.field-meta.xml
<CustomField>
    <fullName>MaterialSourceRestrictions_30__c</fullName>
    <label>MaterialSourceRestrictions_30</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>