force-app/main/default/objects/FA_Output__c/fields/MaterialSourcing__c.field-meta.xml
<CustomField>
    <fullName>MaterialSourcing__c</fullName>
    <label>MaterialSourcing</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>