force-app/main/default/objects/FA_Output__c/fields/NACE_10__c.field-meta.xml
<CustomField>
    <fullName>NACE_10__c</fullName>
    <label>NACE 10</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>