force-app/main/default/objects/FA_Output__c/fields/OA01__c.field-meta.xml
<CustomField>
    <fullName>OA01__c</fullName>
    <label>OA01</label>
    <length>255</length>
    <type>Text</type>
</CustomField>