force-app/main/default/objects/FA_Output__c/fields/OB010__c.field-meta.xml
<CustomField>
    <fullName>OB010__c</fullName>
    <label>OB010</label>
    <length>255</length>
    <type>Text</type>
</CustomField>