force-app/main/default/objects/FA_Output__c/fields/OB030__c.field-meta.xml
<CustomField>
    <fullName>OB030__c</fullName>
    <label>OB030</label>
    <length>255</length>
    <type>Text</type>
</CustomField>