force-app/main/default/objects/FA_Output__c/fields/OutletOptionPriceAdder__c.field-meta.xml
<CustomField>
    <fullName>OutletOptionPriceAdder__c</fullName>
    <label>OutletOptionPriceAdder</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>