force-app/main/default/objects/FA_Output__c/fields/OutletTWellTCouplePriceAdder__c.field-meta.xml
<CustomField>
    <fullName>OutletTWellTCouplePriceAdder__c</fullName>
    <label>OutletTWellTCouplePriceAdder</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>