force-app/main/default/objects/FA_Output__c/fields/OW110__c.field-meta.xml
<CustomField>
    <fullName>OW110__c</fullName>
    <label>OW110</label>
    <length>255</length>
    <type>Text</type>
</CustomField>