force-app/main/default/objects/FA_Output__c/fields/OW120__c.field-meta.xml
<CustomField>
    <fullName>OW120__c</fullName>
    <label>OW120</label>
    <length>255</length>
    <type>Text</type>
</CustomField>