force-app/main/default/objects/FA_Output__c/fields/OW130__c.field-meta.xml
<CustomField>
    <fullName>OW130__c</fullName>
    <label>OW130</label>
    <length>255</length>
    <type>Text</type>
</CustomField>