force-app/main/default/objects/FA_Output__c/fields/PaintingCoating__c.field-meta.xml
<CustomField>
    <fullName>PaintingCoating__c</fullName>
    <label>Painting/Coating</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>