force-app/main/default/objects/FA_Output__c/fields/PaintOptions__c.field-meta.xml
<CustomField>
    <fullName>PaintOptions__c</fullName>
    <label>PaintOptions</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>