force-app/main/default/objects/FA_Output__c/fields/PC_Override__c.field-meta.xml
<CustomField>
    <fullName>PC_Override__c</fullName>
    <label>PC Override</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>