force-app/main/default/objects/FA_Output__c/fields/PositiveMaterialIdentification__c.field-meta.xml
<CustomField>
    <fullName>PositiveMaterialIdentification__c</fullName>
    <label>PositiveMaterialIdentification</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>