force-app/main/default/objects/FA_Output__c/fields/Price_Total__c.field-meta.xml
<CustomField>
    <fullName>Price_Total__c</fullName>
    <label>Price Total</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>