force-app/main/default/objects/FA_Output__c/fields/Queue_Time_20__c.field-meta.xml
<CustomField>
    <fullName>Queue_Time_20__c</fullName>
    <label>Queue_Time_20</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>