force-app/main/default/objects/FA_Output__c/fields/RadiographicExamination__c.field-meta.xml
<CustomField>
    <fullName>RadiographicExamination__c</fullName>
    <label>RadiographicExamination</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>