force-app/main/default/objects/FA_Output__c/fields/Radiography_10__c.field-meta.xml
<CustomField>
    <fullName>Radiography_10__c</fullName>
    <label>Radiography 10</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>