force-app/main/default/objects/FA_Output__c/fields/Radiography_20__c.field-meta.xml
<CustomField>
    <fullName>Radiography_20__c</fullName>
    <label>Radiography 20</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>