force-app/main/default/objects/FA_Output__c/fields/Spring__c.field-meta.xml
<CustomField>
    <fullName>Spring__c</fullName>
    <label>Spring</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>