force-app/main/default/objects/FA_Output__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BrinnellHardnessExamination__c</columns>
    <columns>CharpyImpactTesting__c</columns>
    <columns>FilletWeldLiquidDyePenetrantExamination__c</columns>
    <columns>InletOptionPriceAdder__c</columns>
    <columns>InletTWellTCouplePriceAdder__c</columns>
    <columns>IntergranularCorrosionTesting__c</columns>
    <columns>LiquidDyePenetrantExamination__c</columns>
    <columns>MagneticParticleExamination__c</columns>
    <columns>ModelBase__c</columns>
    <columns>OutletOptionPriceAdder__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>